--- a/register.html
+++ b/register.html
@@ -1,69 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <title>Registration Form</title>
-<meta name="description" content="">
-<meta name="author" content="">
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <style>
+    body {
+      background-color: #26253a;
+    }
 
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/animate.css">
-  <link rel="stylesheet" href="css/font-awesome.min.css">
+    form {
+      max-width: 500px;
+      margin: 0 auto;
+      padding: 40px;
+      background-color: #ffffff;
+      border-radius: 5px;
+      margin-top: 150px;
+    }
 
-  <title>Registration Form</title>
-  <link rel="stylesheet" href="/Users/quynhnhu/Documents/htms-css-course/New Web/fitness1/css/style.css" required/>
- 
-  <!-- Main css -->
-<link rel="stylesheet" href="css/style.css">
+    form input[type="text"],
+    form input[type="password"],
+    form input[type="email"] {
+      width: 100%;
+      padding: 12px;
+      border: none;
+      border-radius: 3px;
+      margin-bottom: 10px;
+      box-sizing: border-box;
+      background-color: #ffffff;
+      color: #26253a;
+    }
 
-<!-- Google Font -->
-<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Lora:700italic' rel='stylesheet' type='text/css'>
-
+    form input[type="submit"] {
+      background-color: #26253a;
+      color: #ffffff;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 3px;
+      cursor: pointer;
+      width: 100%;
+      font-size: 18px; /* Adjust the font size as needed */
+    }
+  </style>
 </head>
-<body class="register">
-<!---  <div class="container"> -->
-    <header>Registration Form</header>
-    <form action="#" class="form">
-      <div class="input-box">
-        <label for="first-name">First Name</label>
-        <input type="text" placeholder="Enter first name" />
-      </div>
-      <div class="input-box">
-        <label for="first-name">Last Name</label>
-        <input type="text" placeholder="Enter last name" />
-      </div>
-      <div class="form-group">
-        <label for="email">Email Address</label>
-        <input type="email" id="email" name="email" required>
-      </div>
-      <div class="form-group">
-        <label for="phone">Phone Number</label>
-        <input type="tel" id="phone" name="phone" required>
-      </div>
-      <div class="form-group">
-        <label for="gender">Gender</label>
-        <select id="gender" name="gender" required>
-          <option value="">Select</option>
-          <option value="male">Male</option>
-          <option value="female">Female</option>
-          <option value="other">Other</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="city">City</label>
-        <input type="text" id="city" name="city" required>
-      </div>
-      <div class="form-group">
-        <label for="country">Country</label>
-        <input type="text" id="country" name="country" required>
-      </div>
-      <div class="form-button">
-        <input type="submit" value="Register">
-      </div>
-    </form>
-  <!--</div>-->
+<body>
+  <form>
+    <label for="fullname">Full Name:</label>
+    <input type="text" id="fullname" name="fullname" placeholder="Enter your full name" required>
+
+    <label for="username">Username:</label>
+    <input type="text" id="username" name="username" placeholder="Enter a username" required>
+
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" placeholder="Enter a password" required>
+
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" placeholder="Enter your email address" required>
+
+    <input type="submit" value="Register">
+  </form>
 </body>
 </html>
